--- a/public/stylesheets/login.styl
+++ b/public/stylesheets/login.styl
@@ -16,6 +16,7 @@
       text-align center
       border-radius 10px 10px 0 0
       background-color rgb(78, 179, 79)
+      font-size 10px
     .inputs-container
       position relative
       width 100%
