--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,8 +1,37 @@
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   box-sizing: border-box;
+  margin: 0;
 }
 a {
   color: #00b7ff;
+}
+.nav-wrap {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 50px;
+  background-color: #1a1a1a;
+}
+.nav-wrap ul {
+  position: absolute;
+  color: #fff;
+}
+.nav-wrap ul li {
+  display: inline-block;
+  padding: 0 5px;
+  cursor: pointer;
+  border-right: solid 1px #fff;
+}
+.nav-wrap ul li:hover a {
+  color: #288045;
+}
+.nav-wrap ul li a {
+  text-decoration: none;
+  color: #fff;
+}
+.nav-wrap ul li a:active,
+.nav-wrap ul li a:focus {
+  outline: none;
+  color: #288045;
 }
